Plugin: add auto udp mavlink mirror example

--- a/MissionPlanner.csproj
+++ b/MissionPlanner.csproj
@@ -947,6 +947,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="plugins\example20-multiplepositions.cs" />
+    <None Include="plugins\example22-autoforward.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="Utilities\AirMarket.cs">
       <SubType>UserControl</SubType>
     </Compile>
